<resources>
    <string name="app_name">Nilkamal Poultry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="spinner_title">Select Category</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Products</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_login">Login</string>
    <string name="dashboard">DashBoard</string>
    <string name="reports">Reports</string>
    <string name="sale">Sale</string>
    <string name="quotation">Pullet Quotation</string>
    <string name="salereturn">Sale Return</string>
    <string name="purchase">Purchase</string>
    <string name="purchasereturn">Purchase Return</string>
    <string name="receipt">Receipt</string>
    <string name="payment">Payment</string>
    <string name="language">Language</string>
    <string name="backup">Backup &amp; Restore</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="contactus">Contact Us</string>
    <string name="menu__logout">Log Out</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="edit_setting__logout_question">Are you sure to logout ? </string>
    <string name="edit_setting__terms_and_conditions">Terms and Conditions</string>
    <string name="WelComeUser">Wel Come %1$s</string>
    <string name="VoucherTypeCash">Cash</string>
    <string name="VoucherTypeCredit">Credit</string>
    <string name="LedgerBalance">Balance : %1$s</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_stop">Location Stop</string>
    <string name="channel_id">Supervisor Channel</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="activity_image_trans">activity_image_transition</string>
    <string name="accountsavesuccess">Account Save Successfully...</string>
    <string name="tracking_is_off">Tracking is Off</string>
    <string name="tracking_is_on">Tracking is On</string>
    <string name="textfields_empty_or_spaces">Please fill in both fields. User names cannot have a space.</string>
    <string name="google_play_services_unavailable">Please go into Settings > Apps and enable Google Play Services.</string>
    <string name="activity_text_trans">activity_text_transition</string>
    <string name="activity_mixed_trans">activity_mixed_transition</string>
    <string name="fragment_image_trans">fragment_image_transition</string>
    <string name="image_default__image">Default Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success">SUCCESS</string>
    <string name="confirm">CONFIRM</string>
    <string name="info">INFO</string>
    <string name="error">ERROR</string>
    <string name="warning">WARNING</string>
    <string name="version_update">Version Update</string>
    <string name="update">Update</string>
    <string name="error_message__select_location">Please select location.!</string>
    <string name="notification__alert">Alert</string>
    <string name="message__register_success">Successfully Register.</string>
    <string name="message__loading">Loading…</string>
    <string name="message__please_wait">Please wait…</string>
    <string name="message__welcome">सुस्वागतम...</string>
    <string name="message__want_to_quit">आपणास अॅप बंद करावयाचे आहे काय?</string>
    <string name="message__ok_close">अोके</string>
    <string name="message__cancel_close">कॅन्सल</string>
    <string name="file_provider_authority" translatable="false">com.atharvainfo.nilkamal.fileprovider</string>
    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="webview_loading">Load Content... </string>
    <string name="backbutton">Are you sure,want to Exit from App?</string>
    <string name="SaveMessage">Entry Save Successfully...</string>
    <string name="ok_dialog">Ok</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="url_app_google_play">https://play.google.com/store/apps/details?id=com.wire</string>
    <string name="http">http://</string>
    <string name="download">Download</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">Cancel</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="no_internet_error">प्रथम इंटरनेट कनेक्शन चालु करा.</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version is available. Please update to New version</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="updateapp">Update</string>
    <string name="appupto_date">App Is UpToDate</string>
    <string name="update_now">Update Now</string>
    <string name="restart" translatable="false">Restart</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="dashboard_toreceive">To Receive</string>
    <string name="dashboard_topay">To Pay</string>
    <string name="cashinhand">Cash In Hand</string>
    <string name="dashboard_bankbal">Bank Balance</string>
    <string name="todo" />
    <string name="allproductdashbord">Inventory Products</string>
    <string name="itemtobefinish">Product About To Finish</string>
    <string name="batched_location_updates">Batched location updates</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="default_channel">Default channel</string>
    <string name="gps_dialog_title">GPS...</string>
    <string name="gps_enable_message"><![CDATA[GPS is not enable, Please enable it in next window.<br>]]></string>
    <string name="username">Username/Email</string>
    <string name="password">Password</string>
    <string name="toggle_login_signin">New Here? Sign up</string>
    <string name="login">Login</string>
    <string name="new_here_question"><![CDATA[New Here? Sign Up >]]></string>
    <string name="right_arrow">Right Arrow</string>
    <string name="error_email_required">Email Required</string>
    <string name="error_password_required">password can not be empty</string>
    <string name="QutationTitleName">QUOTATION</string>
    <string name="QutationTo">Quotation To:</string>
    <string name="QutationDate">Date:</string>
    <string name="DateHint">Choose Date</string>
    <string name="QuotationFarmName">Farm / Farmer Name:</string>
    <string name="QuotationAddress">Address:</string>
    <string name="QuotationContactNo">Contact No:</string>
    <string name="QuotationEmailId">Email Id:</string>
    <string name="QuotationAddCustomer">+Add a Customer </string>
    <string name="QuotationDescription">Description:</string>
    <string name="QuotationLineTotal">Line Total</string>
    <string name="QuotationAddItem">+Add a Item</string>
    <string name="QuotationItemName">Product Name</string>
    <string name="QuotationItemQuantity">Quantity</string>
    <string name="QuotationItemRate">Rate</string>
    <string name="QuotationItemAmount">Total Amount</string>
    <string name="QuotationSubTotal">Sub Total:</string>
    <string name="QuotationDiscount">Discount:</string>
    <string name="QuotationGST">GST:</string>
    <string name="QuotationRoundOff">Round Off:</string>
    <string name="QuotationTotal">Total:</string>
    <string name="QuotationPaidAmount">Paid Amount:</string>
    <string name="QuotationAmountDue">Amount Due:</string>
    <string name="QuotationNarrationHint">Narration</string>
    <string name="QuotationNo">Quotation No.</string>
    <string name="PurchaseInvoiceTitle">PURCHASE INVOICE</string>
    <string name="PurchaseInvoice_BilledTo">Billed To:</string>
    <string name="PurchaseInvoice_AddCustomer">+Select Supplier</string>
    <string name="PurchaseInvoice_InvoiceNo">Invoice No:</string>
    <string name="PurchaseInvoice_Dateofissue">Date of Issue:</string>
    <string name="PurchaseInvoice_DueDate">Due Date:</string>
    <string name="PurchaseInvoice_OrderNo">Supplier Bill No</string>
    <string name="PurchaseInvoice_Decription">Description:</string>
    <string name="PurchaseInvoice_LineTotal">Line Total</string>
    <string name="PurchaseInvoice_AddItem">+Add a Item</string>
    <string name="PurchaseInvoice_SubTotal">Sub Total:</string>
    <string name="PurchaseInvoice_Discount">Discount:</string>
    <string name="PurchaseInvoice_GST">GST:</string>
    <string name="PurchaseInvoice_RoundOff">Round Off:</string>
    <string name="PurchaseInvoice_Total">Total:</string>
    <string name="PurchaseInvoice_PaidAmount">Paid Amount:</string>
    <string name="PurchaseInvoice_AmountDue">Amount Due:</string>
    <string name="PurchaseInvoice_NarrationHint">Narration</string>
    <string name="PurchaseInvoice_Address">Address:</string>
    <string name="PurchaseInvoice_EmailId">Email:</string>
    <string name="PurchaseInvoice_ContactNo">Contact No:</string>
    <string name="SaleInvoiceTitle">SALE INVOICE</string>
    <string name="SaleInvoice_BilledTo">Billed To:</string>
    <string name="SaleInvoice_AddCustomer">+Add a customer</string>
    <string name="SaleInvoice_InvoiceNo">Invoice No:</string>
    <string name="SaleInvoice_Dateofissue">Date of Issue:</string>
    <string name="SaleInvoice_DueDate">Due Date:</string>
    <string name="SaleInvoice_OrderNo">Challan No</string>
    <string name="SaleInvoice_Decription">Description:</string>
    <string name="SaleInvoice_LineTotal">Line Total</string>
    <string name="SaleInvoice_AddItem">+Add a Item</string>
    <string name="AddItem_Title"> ADD ITEM</string>
    <string name="AddItem_ProductName">Product Name</string>
    <string name="AddItem_Quantity">Quantity</string>
    <string name="AddItem_Rate">Rate</string>
    <string name="AddItem_Amount">Amount</string>
    <string name="AddItem_btnadd">Add</string>
    <string name="AddCustomer_EmailId">Email Id</string>
    <string name="action_settings">Settings</string>
    <string name="signupusingmobile">Sign up using Mobile No.</string>
    <string name="name22">Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="termscondition">I agree to Poultry Soft Terms of Service, Privacy Poliy and Content Policies</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
</resources>