<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/my_spmove" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rootstart"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_dailyTransac"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_add_a_photo_black_24dp"
            android:title="@string/nav_gallery" />
        <item
            android:id="@+id/nav_leaverequest"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_farmenquiry"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_supplycl"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="@string/nav_contact" />
    </group>
</menu>