<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/my_move" android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_gallary"
        android:icon="@drawable/ic_add_a_photo_black_24dp"
        android:title="@string/nav_location" />
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/nav_location" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_local_phone_black_24dp"
        android:title="@string/nav_contact" />
    </group>
</menu>