<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:configChanges="orientation|screenSize"
    android:background="@color/md_white_1000">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        android:elevation="10dp"
        android:padding="10dp"
        style="@style/CardView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:elevation="10dp"


            android:background="#dde4dd">

            <TextView
                android:id="@+id/txtmessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_marginTop="13dp"
                android:background="#d4d4d4"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/AddItem_Title"
                android:textColor="#FF00FF"
                android:textSize="17sp"
                android:textStyle="bold" />
            <android.support.v7.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_below="@+id/txtmessage"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"

                        android:id = "@+id/productname"
                        android:layout_marginTop = "8dp"
                        android:layout_marginStart = "10dp"
                        android:layout_marginEnd = "10dp"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:id = "@+id/prodname"
                            android:hint = "@string/AddItem_ProductName"
                            android:singleLine="true"

                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:layout_below="@+id/productname"
                        android:id = "@+id/quantity"
                        android:layout_marginTop = "8dp"
                        android:layout_marginStart = "10dp"
                        android:layout_marginEnd = "10dp"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:id = "@+id/qty"
                            android:hint = "@string/AddItem_Quantity"

                            android:singleLine="true"

                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:id = "@+id/rate"
                        android:layout_below="@+id/quantity"
                        android:layout_marginTop = "5dp"
                        android:layout_marginStart = "10dp"
                        android:layout_marginEnd = "10dp"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:id = "@+id/rate1"
                            android:hint = "@string/AddItem_Rate"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:id = "@+id/amount"
                        android:layout_below="@+id/rate"
                        android:layout_marginTop = "5dp"
                        android:layout_marginStart = "10dp"
                        android:layout_marginEnd = "10dp"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:id = "@+id/amount1"
                            android:hint = "@string/AddItem_Amount"
                            />
                    </android.support.design.widget.TextInputLayout>


                </RelativeLayout>


            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/btnadd"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view3"

                android:layout_marginLeft="130dp"
                android:fontFamily="serif"
                android:text="@string/AddItem_btnadd"
                android:backgroundTint="@color/md_teal_600"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />



        </RelativeLayout>


    </android.support.v7.widget.CardView>













</RelativeLayout>